--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -31,7 +31,7 @@ h6 {
     padding-bottom: 50px;
     text-align: center;
     color: #f8f8f8;
-    background: url(../img/intro-bg.jpg) no-repeat center center;
+    background: url(../img/intro-bg2.jpg) no-repeat center center;
     background-size: cover;
 }
 
@@ -163,4 +163,16 @@ footer {
 
 p.copyright {
     margin: 15px 0 0;
+}
+
+.rounded{
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  border-radius: 10px; /* future proofing */
+}
+
+.shadow {
+  -moz-box-shadow:    0px 0px 6px 6px #ccc;
+  -webkit-box-shadow: 0px 0px 6px 6px #ccc;
+  box-shadow:         0px 0px 6px 6px #ccc;
 }
