--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -21,18 +21,22 @@ h6 {
     font-weight: 700;
 }
 
+
 .lead {
     font-size: 18px;
     font-weight: 400;
 }
 
+#canvas-container{
+}
+
 .intro-header {
-    padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
-    padding-bottom: 50px;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
     text-align: center;
     color: #f8f8f8;
-    background: url(../img/intro-bg2.jpg) no-repeat center center;
-    background-size: cover;
 }
 
 .intro-message {
