--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -27,16 +27,28 @@ h6 {
     font-weight: 400;
 }
 
-#canvas-container{
-}
+
 
 .intro-header {
     position: absolute;
+    top: 0px;
+    left: 0px;
     width: 100%;
     height: 100%;
-    top: 0;
-    text-align: center;
-    color: #f8f8f8;
+    z-index: 999;
+    background: url(../img/intro-bg2.jpg) no-repeat center center;
+    background-size: cover;
+}
+
+.intro-message-container{
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  z-index: 1000;
+  height: 100%;
+  width: 100%;
+  color: #f8f8f8;
+  text-align: center;
 }
 
 .intro-message {
