--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -28,6 +28,10 @@ h6 {
 }
 
 
+#canvas-container{
+  margin: 0;
+}
+
 
 .intro-header {
     position: absolute;
@@ -36,7 +40,7 @@ h6 {
     width: 100%;
     height: 100%;
     z-index: 999;
-    background: url(../img/intro-bg2.jpg) no-repeat center center;
+    background-color: black;
     background-size: cover;
 }
 
@@ -61,6 +65,11 @@ h6 {
     margin: 0;
     text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
     font-size: 5em;
+}
+
+.demo-button {
+  margin-bottom: 15px;
+
 }
 
 .intro-divider {
