--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -8,7 +8,8 @@ body,
 html {
     width: 100%;
     height: 100%;
-    margin: 0
+    margin: 0;
+
 }
 
 body,
@@ -22,6 +23,9 @@ h6 {
     font-weight: 700;
 }
 
+a {
+    text-decoration: none;
+}
 
 .lead {
     font-size: 18px;
